--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
         <h2>What are we doing</h2>
         <ul>
           <li>
-            <img src="/images/img1.jpg" alt="Developing" width="360" />
+            <img src="./images/img1.jpg" alt="Developing" width="360" />
           </li>
           <li>
-            <img src="/images/img2.jpg" alt="Adaptaion" width="360" />
+            <img src="./images/img2.jpg" alt="Adaptaion" width="360" />
           </li>
           <li>
-            <img src="/images/img3.jpg" alt="Design" width="360" />
+            <img src="./images/img3.jpg" alt="Design" width="360" />
           </li>
         </ul>
       </section>
@@ -82,7 +82,7 @@
         <ul>
           <li>
             <img
-              src="/images/Mark.jpg"
+              src="./images/Mark.jpg"
               alt="Mark Guerrero' photo"
               width="264"
             />
@@ -90,13 +90,13 @@
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="/images/Tom.jpg" alt="Tom Ford' photo" width="264" />
+            <img src="./images/Tom.jpg" alt="Tom Ford' photo" width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img
-              src="/images/Camila.jpg"
+              src="./images/Camila.jpg"
               alt="Camila Garcia' photo"
               width="264"
             />
@@ -105,7 +105,7 @@
           </li>
           <li>
             <img
-              src="/images/Daniel.jpg"
+              src="./images/Daniel.jpg"
               alt="Daniel Wilson' photo"
               width="264"
             />
